--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,8 @@
         "node_modules/@mcbe/dummy-console/**/*",
         "node_modules/krchecktimer/**/*",
         "node_modules/@mcbe/store/**/*",
-        "node_modules/@mcbe/scoreboard/**/*"
+        "node_modules/@mcbe/scoreboard/**/*",
+        "node_modules/@mcbe/system_client/**/*",
+        "node_modules/@mcbe/ruacore_client/**/*"
     ]
 }
