--- a/package.json
+++ b/package.json
@@ -15,29 +15,32 @@
         "url": "https://github.com/karikera/mcbe_modules"
     },
     "dependencies": {
-        "@types/escape-string-regexp": "^2.0.1",
-        "escape-string-regexp": "^2.0.0",
-        "@mcbe/ruakr_util": "latest",
-        "@mcbe/ruakr_const": "latest",
         "@mcbe/command": "latest",
         "@mcbe/console": "latest",
+        "@mcbe/dummy-console": "latest",
         "@mcbe/event": "latest",
         "@mcbe/identifier": "latest",
         "@mcbe/lang": "latest",
         "@mcbe/nexttick": "latest",
+        "@mcbe/ruacore_client": "latest",
         "@mcbe/ruacore_server": "latest",
+        "@mcbe/ruakr_const": "latest",
+        "@mcbe/ruakr_util": "latest",
+        "@mcbe/scoreboard": "latest",
+        "@mcbe/store": "latest",
+        "@mcbe/system_client": "latest",
         "@mcbe/system_server": "latest",
         "@mcbe/system_shared": "latest",
         "@mcbe/timer": "latest",
-        "krlog": "latest",
+        "@types/escape-string-regexp": "^2.0.1",
+        "@types/node": "^12.7.9",
+        "escape-string-regexp": "^2.0.0",
+        "krchecktimer": "latest",
         "krevent": "latest",
+        "krlog": "latest",
         "minecraft-scripting-types-client": "^1.0.0",
         "minecraft-scripting-types-server": "^1.0.0",
-        "@mcbe/dummy-console": "latest",
-        "krchecktimer": "latest",
-        "@mcbe/store": "latest",
-        "@mcbe/scoreboard": "latest",
-        "@mcbe/system_client": "latest",
-        "@mcbe/ruacore_client": "latest"
+        "@mcbe/recipe": "latest",
+        "@mcbe/item": "latest"
     }
 }
