--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,8 @@
         "node_modules/@mcbe/store/**/*",
         "node_modules/@mcbe/scoreboard/**/*",
         "node_modules/@mcbe/system_client/**/*",
-        "node_modules/@mcbe/ruacore_client/**/*"
+        "node_modules/@mcbe/ruacore_client/**/*",
+        "node_modules/@mcbe/recipe/**/*",
+        "node_modules/@mcbe/item/**/*"
     ]
 }
