--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,7 @@
         "node_modules/@mcbe/system_client/**/*",
         "node_modules/@mcbe/ruacore_client/**/*",
         "node_modules/@mcbe/recipe/**/*",
-        "node_modules/@mcbe/item/**/*"
+        "node_modules/@mcbe/item/**/*",
+        "tool/*"
     ]
 }
