--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,7 +22,7 @@
             "request": "launch",
             "name": "Generate ID",
             "program": "${workspaceFolder}\\tool\\generate.js",
-            "args": ["id"]
+            "args": ["gen_id"]
         }
     ]
 }
