--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "minecraft-scripting-types-client": "^1.0.0",
         "minecraft-scripting-types-server": "^1.0.0",
         "node-html-parser": "^1.1.16",
+        "source-map-support": "^0.5.13",
         "strip-json-comments": "^3.0.1"
     }
 }
