--- a/package.json
+++ b/package.json
@@ -15,31 +15,31 @@
         "url": "https://github.com/karikera/mcbe_modules"
     },
     "dependencies": {
-        "@mcbe/command": "latest",
-        "@mcbe/console": "latest",
-        "@mcbe/dummy-console": "latest",
-        "@mcbe/event": "latest",
-        "@mcbe/identifier": "latest",
-        "@mcbe/item": "latest",
-        "@mcbe/lang": "latest",
-        "@mcbe/nexttick": "latest",
-        "@mcbe/recipe": "latest",
-        "@mcbe/ruacore_client": "latest",
-        "@mcbe/ruacore_server": "latest",
-        "@mcbe/ruakr_const": "latest",
-        "@mcbe/ruakr_util": "latest",
-        "@mcbe/scoreboard": "latest",
-        "@mcbe/store": "latest",
-        "@mcbe/system_client": "latest",
-        "@mcbe/system_server": "latest",
-        "@mcbe/system_shared": "latest",
-        "@mcbe/timer": "latest",
+        "@mcbe/command": "^1.0.0",
+        "@mcbe/console": "^1.0.0",
+        "@mcbe/dummy-console": "^1.0.0",
+        "@mcbe/event": "^1.0.0",
+        "@mcbe/identifier": "^1.0.0",
+        "@mcbe/item": "^1.0.0",
+        "@mcbe/lang": "^1.0.0",
+        "@mcbe/nexttick": "^1.0.0",
+        "@mcbe/recipe": "^1.0.0",
+        "@mcbe/ruacore_client": "^1.0.0",
+        "@mcbe/ruacore_server": "^1.0.0",
+        "@mcbe/ruakr_const": "^1.0.0",
+        "@mcbe/ruakr_util": "^1.0.0",
+        "@mcbe/scoreboard": "^1.0.0",
+        "@mcbe/store": "^1.0.0",
+        "@mcbe/system_client": "^1.0.0",
+        "@mcbe/system_server": "^1.0.0",
+        "@mcbe/system_shared": "^1.0.0",
+        "@mcbe/timer": "^1.0.0",
         "@types/escape-string-regexp": "^2.0.1",
         "@types/node": "^12.7.9",
         "escape-string-regexp": "^2.0.0",
-        "krchecktimer": "latest",
-        "krevent": "latest",
-        "krlog": "latest",
+        "krchecktimer": "^1.0.0",
+        "krevent": "^1.0.0",
+        "krlog": "^1.0.0",
         "minecraft-scripting-types-client": "^1.0.0",
         "minecraft-scripting-types-server": "^1.0.0",
         "node-html-parser": "^1.1.16",
