lang@1.0.5 supports multi-languages identifier@1.0.5 add totem krfileutil@1.0.0 published mcaddon-lang2ts@1.0.0 published

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,6 +36,8 @@
         "node_modules/@mcbe/ruacore_client/**/*",
         "node_modules/@mcbe/recipe/**/*",
         "node_modules/@mcbe/item/**/*",
-        "tool/*"
+        "tool/*",
+        "node_modules/krfileutil/**/*",
+        "node_modules/mcaddon-lang2ts/**/*"
     ]
 }
