--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 !/node_modules/krevent
 !/node_modules/krlog
 !/node_modules/krchecktimer
+!/node_modules/krfileutil
+!/node_modules/mcaddon-lang2ts
 !/node_modules/@mcbe/store
 !/node_modules/@mcbe/dummy-console
 !/node_modules/@mcbe/ruakr_const
