--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
         "minecraft-scripting-types-server": "^1.0.0",
         "node-html-parser": "^1.1.16",
         "source-map-support": "^0.5.13",
-        "strip-json-comments": "^3.0.1"
+        "strip-json-comments": "^3.0.1",
+        "krfileutil": "latest",
+        "mcaddon-lang2ts": "latest"
     }
 }
