krgeometry@1.0.0 added command@1.0.13 nexttick@1.0.4 recipe@1.0.2 scoreboard@1.0.2 store@1.0.9 system_server@1.0.3 system_shared@1.0.3 timer@1.0.6 change comment style

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 !/node_modules/krlog
 !/node_modules/krchecktimer
 !/node_modules/krfileutil
+!/node_modules/krgeometry
 !/node_modules/mcaddon-lang2ts
 !/node_modules/@mcbe/store
 !/node_modules/@mcbe/dummy-console
