--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
         "@mcbe/console": "^1.0.0",
         "@mcbe/dummy-console": "^1.0.0",
         "@mcbe/event": "^1.0.0",
+        "@mcbe/event_client": "^1.0.0",
+        "@mcbe/event_server": "^1.0.0",
         "@mcbe/identifier": "^1.0.0",
         "@mcbe/item": "^1.0.0",
         "@mcbe/lang": "^1.0.0",
         "@mcbe/nexttick": "^1.0.0",
         "@mcbe/recipe": "^1.0.0",
-        "@mcbe/ruacore_client": "^1.0.0",
-        "@mcbe/ruacore_server": "^1.0.0",
         "@mcbe/ruakr_const": "^1.0.0",
         "@mcbe/ruakr_util": "^1.0.0",
         "@mcbe/scoreboard": "^1.0.0",
