--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
         "node_modules/@mcbe/event/**/*",
         "node_modules/@mcbe/lang/**/*",
         "node_modules/@mcbe/nexttick/**/*",
-        "node_modules/@mcbe/ruacore_server/**/*",
+        "node_modules/@mcbe/event_server/**/*",
         "node_modules/@mcbe/timer/**/*",
         "node_modules/@mcbe/console/**/*",
         "node_modules/@mcbe/dummy-console/**/*",
@@ -33,7 +33,7 @@
         "node_modules/@mcbe/store/**/*",
         "node_modules/@mcbe/scoreboard/**/*",
         "node_modules/@mcbe/system_client/**/*",
-        "node_modules/@mcbe/ruacore_client/**/*",
+        "node_modules/@mcbe/event_client/**/*",
         "node_modules/@mcbe/recipe/**/*",
         "node_modules/@mcbe/item/**/*",
         "tool/*",
