--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@mcbe/event": "^1.0.0",
         "@mcbe/event_client": "^1.0.0",
         "@mcbe/event_server": "^1.0.0",
+        "@mcbe/farticker": "latest",
         "@mcbe/identifier": "^1.0.0",
         "@mcbe/item": "^1.0.0",
         "@mcbe/lang": "^1.0.0",
@@ -36,18 +37,21 @@
         "@mcbe/timer": "^1.0.0",
         "@types/escape-string-regexp": "^2.0.1",
         "@types/node": "^12.7.9",
+        "@typescript-eslint/eslint-plugin": "^2.3.2",
+        "@typescript-eslint/parser": "^2.3.2",
         "escape-string-regexp": "^2.0.0",
+        "eslint": "^6.5.1",
         "krchecktimer": "^1.0.0",
         "krevent": "^1.0.0",
+        "krfileutil": "latest",
+        "krgeometry": "latest",
         "krlog": "^1.0.0",
+        "mcaddon-lang2ts": "latest",
         "minecraft-scripting-types-client": "^1.0.0",
         "minecraft-scripting-types-server": "^1.0.0",
         "node-html-parser": "^1.1.16",
         "source-map-support": "^0.5.13",
         "strip-json-comments": "^3.0.1",
-        "krfileutil": "latest",
-        "mcaddon-lang2ts": "latest",
-        "krgeometry": "latest",
-        "@mcbe/farticker": "latest"
+        "typescript": "^3.6.3"
     }
 }
