--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "eslint.enable": true,
     "eslint.validate": [
-		{ "language": "typescript", "autoFix": true }
+		{ "language": "typescript" }
 	]
 }
