--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "install": "cd \nnpm link"
+        "lint": "eslint **/*.ts"
     },
     "keywords": [],
     "author": "",
@@ -41,6 +41,7 @@
         "@typescript-eslint/parser": "^2.3.2",
         "escape-string-regexp": "^2.0.0",
         "eslint": "^6.5.1",
+        "eslint-config-minecraft": "^0.1.0",
         "krchecktimer": "^1.0.0",
         "krevent": "^1.0.0",
         "krfileutil": "latest",
@@ -52,6 +53,7 @@
         "node-html-parser": "^1.1.16",
         "source-map-support": "^0.5.13",
         "strip-json-comments": "^3.0.1",
+        "typedoc": "^0.15.0",
         "typescript": "^3.6.3"
     }
 }
