command@1.1.1 fix replaceBlock return value add publish-all to build task

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -30,6 +30,13 @@
                 "$eslint-stylish"
             ],
             "group": "build"
+        },
+        {
+            "label": "Publish All",
+            "type": "npm",
+            "script": "publish-all",
+            "problemMatcher": [],
+            "group": "build"
         }
     ]
 }
