--- a/.eslintignore
+++ b/.eslintignore
@@ -27,4 +27,5 @@
 !/node_modules/@mcbe/recipe
 !/node_modules/@mcbe/item
 !/node_modules/@mcbe/farticker
+!/node_modules/@mcbe/version
 ##</packages>
