--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,6 +40,7 @@
         "node_modules/krfileutil/**/*",
         "node_modules/mcaddon-lang2ts/**/*",
         "node_modules/krgeometry/**/*",
-        "node_modules/@mcbe/farticker/**/*"
+        "node_modules/@mcbe/farticker/**/*",
+        "node_modules/@mcbe/version/**/*"
     ]
 }
