add user system modules

--- a/.eslintignore
+++ b/.eslintignore
@@ -27,4 +27,20 @@
 !/node_modules/@mcbe/item
 !/node_modules/@mcbe/farticker
 !/node_modules/@mcbe/version
+!/node_modules/@mcbe/damper
+!/node_modules/@mcbe/entity
+!/node_modules/@mcbe/component
+!/node_modules/@mcbe/ruakr_itemgroup
+!/node_modules/@bdsx/block
+!/node_modules/@bdsx/jsonwatcher
+!/node_modules/@bdsx/logininfo
+!/node_modules/@bdsx/position
+!/node_modules/@bdsx/restoreblock
+!/node_modules/@bdsx/ruakr_db
+!/node_modules/@bdsx/ruakr_logdb
+!/node_modules/@bdsx/ruakr_user
+!/node_modules/@bdsx/logininfo-db
+!/node_modules/@bdsx/ruakr_ban
+!/node_modules/@bdsx/ruakr_userlog
+!/node_modules/@mcbe/ruakr_log
 ##</packages>
