--- a/package.json
+++ b/package.json
@@ -17,9 +17,23 @@
         "url": "https://github.com/karikera/mcbe_modules"
     },
     "dependencies": {
+        "@bdsx/block": "latest",
+        "@bdsx/jsonwatcher": "latest",
+        "@bdsx/logininfo": "latest",
+        "@bdsx/logininfo-db": "latest",
+        "@bdsx/position": "latest",
+        "@bdsx/restoreblock": "latest",
+        "@bdsx/ruakr_ban": "latest",
+        "@bdsx/ruakr_db": "latest",
+        "@bdsx/ruakr_logdb": "latest",
+        "@bdsx/ruakr_user": "latest",
+        "@bdsx/ruakr_userlog": "latest",
         "@mcbe/command": "^1.0.0",
+        "@mcbe/component": "latest",
         "@mcbe/console": "^1.0.0",
+        "@mcbe/damper": "latest",
         "@mcbe/dummy-console": "^1.0.0",
+        "@mcbe/entity": "latest",
         "@mcbe/event": "^1.0.0",
         "@mcbe/event_client": "^1.0.0",
         "@mcbe/event_server": "^1.0.0",
@@ -30,6 +44,8 @@
         "@mcbe/nexttick": "^1.0.0",
         "@mcbe/recipe": "^1.0.0",
         "@mcbe/ruakr_const": "^1.0.0",
+        "@mcbe/ruakr_itemgroup": "latest",
+        "@mcbe/ruakr_log": "latest",
         "@mcbe/ruakr_util": "^1.0.0",
         "@mcbe/scoreboard": "^1.0.0",
         "@mcbe/store": "^1.0.0",
@@ -37,13 +53,16 @@
         "@mcbe/system_server": "^1.0.0",
         "@mcbe/system_shared": "^1.0.0",
         "@mcbe/timer": "^1.0.0",
+        "@mcbe/version": "latest",
         "@types/escape-string-regexp": "^2.0.1",
         "@types/node": "^12.7.9",
         "@typescript-eslint/eslint-plugin": "^2.3.2",
         "@typescript-eslint/parser": "^2.3.2",
+        "bdsx": "^1.2.1",
         "escape-string-regexp": "^2.0.0",
         "eslint": "^6.5.1",
         "eslint-config-minecraft": "^0.1.0",
+        "krarraymap": "latest",
         "krchecktimer": "^1.0.0",
         "krfileutil": "latest",
         "krgeometry": "latest",
@@ -55,23 +74,6 @@
         "source-map-support": "^0.5.13",
         "strip-json-comments": "^3.0.1",
         "typedoc": "^0.15.0",
-        "typescript": "^3.6.3",
-        "@mcbe/version": "latest",
-        "@mcbe/damper": "latest",
-        "@mcbe/entity": "latest",
-        "@mcbe/component": "latest",
-        "@mcbe/ruakr_itemgroup": "latest",
-        "@bdsx/block": "latest",
-        "@bdsx/jsonwatcher": "latest",
-        "@bdsx/logininfo": "latest",
-        "@bdsx/position": "latest",
-        "@bdsx/restoreblock": "latest",
-        "@bdsx/ruakr_db": "latest",
-        "@bdsx/ruakr_logdb": "latest",
-        "@bdsx/ruakr_user": "latest",
-        "@bdsx/logininfo-db": "latest",
-        "@bdsx/ruakr_ban": "latest",
-        "@bdsx/ruakr_userlog": "latest",
-        "@mcbe/ruakr_log": "latest"
+        "typescript": "^3.6.3"
     }
 }
