ruakr_util@1.0.1 ruakr_const@1.0.4 krarraymap@1.0.1 damper@1.0.0 entity@1.0.0 component@1.0.0 ruakr_itemgroup@1.0.0 ruakr_log@1.0.0 block@1.0.0 jsonwatcher@1.0.0 logininfo@1.0.0 position@1.0.0 restoreblock@1.0.0 ruakr_db@1.0.0 ruakr_logdb@1.0.0 ruakr_user@1.0.0 logininfo-db@1.0.0 ruakr_ban@1.0.0 ruakr_userlog@1.0.1

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -58,6 +58,7 @@
         "node_modules/@bdsx/ruakr_ban/**/*",
         "node_modules/@bdsx/ruakr_userlog/**/*",
         "node_modules/@bdsx/ruakr_log/**/*",
-        "node_modules/@mcbe/ruakr_log/**/*"
+        "node_modules/@mcbe/ruakr_log/**/*",
+        "node_modules/krarraymap/**/*"
     ]
 }
