--- a/.eslintignore
+++ b/.eslintignore
@@ -43,4 +43,5 @@
 !/node_modules/@bdsx/ruakr_ban
 !/node_modules/@bdsx/ruakr_userlog
 !/node_modules/@mcbe/ruakr_log
+!/node_modules/krarraymap
 ##</packages>
