@bdsx/ruakr_user remove nullish coalescing

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,9 @@
         "sourceMap": true,
         "declaration": true,
         "lib": [
-            "esnext"
+            "es2015"
         ],
-        "target": "esnext"
+        "target": "es2015"
     },
     "include": [
         "node_modules/krlog/**/*",
