--- a/package.json
+++ b/package.json
@@ -58,7 +58,6 @@
         "@types/node": "^12.7.9",
         "@typescript-eslint/eslint-plugin": "^2.3.2",
         "@typescript-eslint/parser": "^2.3.2",
-        "bdsx": "^1.3.0",
         "escape-string-regexp": "^2.0.0",
         "eslint": "^6.5.1",
         "eslint-config-minecraft": "^0.1.0",
@@ -75,5 +74,8 @@
         "strip-json-comments": "^3.0.1",
         "typedoc": "^0.15.0",
         "typescript": "^3.6.3"
+    },
+    "peerDependencies": {
+        "bdsx": "1.x"
     }
 }
