remove package-lock.json ruakr_userlog@1.0.4 fix dependency

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "url": "https://github.com/karikera/mcbe_modules"
     },
     "dependencies": {
+        "bdsx": "1.3.4",
         "@bdsx/block": "latest",
         "@bdsx/jsonwatcher": "latest",
         "@bdsx/logininfo": "latest",
@@ -28,31 +29,31 @@
         "@bdsx/ruakr_logdb": "latest",
         "@bdsx/ruakr_user": "latest",
         "@bdsx/ruakr_userlog": "latest",
-        "@mcbe/command": "^1.0.0",
+        "@mcbe/command": "latest",
         "@mcbe/component": "latest",
-        "@mcbe/console": "^1.0.0",
+        "@mcbe/console": "latest",
         "@mcbe/damper": "latest",
-        "@mcbe/dummy-console": "^1.0.0",
+        "@mcbe/dummy-console": "latest",
         "@mcbe/entity": "latest",
-        "@mcbe/event": "^1.0.0",
-        "@mcbe/event_client": "^1.0.0",
-        "@mcbe/event_server": "^1.0.0",
+        "@mcbe/event": "latest",
+        "@mcbe/event_client": "latest",
+        "@mcbe/event_server": "latest",
         "@mcbe/farticker": "latest",
-        "@mcbe/identifier": "^1.0.0",
-        "@mcbe/item": "^1.0.0",
-        "@mcbe/lang": "^1.0.0",
-        "@mcbe/nexttick": "^1.0.0",
-        "@mcbe/recipe": "^1.0.0",
-        "@mcbe/ruakr_const": "^1.0.0",
+        "@mcbe/identifier": "latest",
+        "@mcbe/item": "latest",
+        "@mcbe/lang": "latest",
+        "@mcbe/nexttick": "latest",
+        "@mcbe/recipe": "latest",
+        "@mcbe/ruakr_const": "latest",
         "@mcbe/ruakr_itemgroup": "latest",
         "@mcbe/ruakr_log": "latest",
-        "@mcbe/ruakr_util": "^1.0.0",
-        "@mcbe/scoreboard": "^1.0.0",
-        "@mcbe/store": "^1.0.0",
-        "@mcbe/system_client": "^1.0.0",
-        "@mcbe/system_server": "^1.0.0",
-        "@mcbe/system_shared": "^1.0.0",
-        "@mcbe/timer": "^1.0.0",
+        "@mcbe/ruakr_util": "latest",
+        "@mcbe/scoreboard": "latest",
+        "@mcbe/store": "latest",
+        "@mcbe/system_client": "latest",
+        "@mcbe/system_server": "latest",
+        "@mcbe/system_shared": "latest",
+        "@mcbe/timer": "latest",
         "@mcbe/version": "latest",
         "@types/escape-string-regexp": "^2.0.1",
         "@types/node": "^12.7.9",
@@ -62,10 +63,10 @@
         "eslint": "^6.5.1",
         "eslint-config-minecraft": "^0.1.0",
         "krarraymap": "latest",
-        "krchecktimer": "^1.0.0",
+        "krchecktimer": "latest",
         "krfileutil": "latest",
         "krgeometry": "latest",
-        "krlog": "^1.0.0",
+        "krlog": "latest",
         "mcaddon-lang2ts": "latest",
         "minecraft-scripting-types-client": "^1.0.0",
         "minecraft-scripting-types-server": "^1.0.0",
@@ -74,8 +75,5 @@
         "strip-json-comments": "^3.0.1",
         "typedoc": "^0.15.0",
         "typescript": "^3.6.3"
-    },
-    "peerDependencies": {
-        "bdsx": "1.x"
     }
 }
