--- a/package.json
+++ b/package.json
@@ -2,13 +2,11 @@
     "name": "mcbe_modules",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "private": true,
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "lint": "eslint **/*.ts",
-        "publish-all": "node tool/publish.js publish",
-        "generate-lang": "node tool/generate.js gen_lang",
-        "generate-id": "node tool/generate.js gen_id"
+        "test": "node packages/tool/test.js",
+        "generate-lang": "node packages/tool/generate.js gen_lang",
+        "generate-id": "node packages/tool/generate.js gen_id"
     },
     "keywords": [],
     "author": "ruakr <karikera3@hotmail.com> (https://rua.kr/)",
@@ -18,64 +16,10 @@
         "url": "https://github.com/karikera/mcbe_modules"
     },
     "dependencies": {
-        "@bdsx/block": "latest",
-        "@bdsx/logininfo": "latest",
-        "@bdsx/logininfo-db": "latest",
-        "@bdsx/position": "latest",
-        "@bdsx/restoreblock": "latest",
-        "@bdsx/ruakr_ban": "latest",
-        "@bdsx/ruakr_db": "latest",
-        "@bdsx/ruakr_logdb": "latest",
-        "@bdsx/ruakr_user": "latest",
-        "@bdsx/ruakr_userlog": "latest",
-        "@mcbe/command": "latest",
-        "@mcbe/component": "latest",
-        "@mcbe/console": "latest",
-        "@mcbe/damper": "latest",
-        "@mcbe/dummy-console": "latest",
-        "@mcbe/entity": "latest",
-        "@mcbe/event": "latest",
-        "@mcbe/event_client": "latest",
-        "@mcbe/event_server": "latest",
-        "@mcbe/farticker": "latest",
-        "@mcbe/identifier": "latest",
-        "@mcbe/item": "latest",
-        "@mcbe/lang": "latest",
-        "@mcbe/nexttick": "latest",
-        "@mcbe/recipe": "latest",
-        "@mcbe/ruakr_const": "latest",
-        "@mcbe/ruakr_itemgroup": "latest",
-        "@mcbe/ruakr_log": "latest",
-        "@mcbe/ruakr_util": "latest",
-        "@mcbe/scoreboard": "latest",
-        "@mcbe/store": "latest",
-        "@mcbe/system_client": "latest",
-        "@mcbe/system_server": "latest",
-        "@mcbe/system_shared": "latest",
-        "@mcbe/timer": "latest",
-        "@mcbe/version": "latest",
-        "@types/escape-string-regexp": "^2.0.1",
-        "@types/node": "^12.7.9",
-        "@typescript-eslint/eslint-plugin": "^2.3.2",
-        "@typescript-eslint/parser": "^2.3.2",
-        "bdsx": "1.3.4",
-        "escape-string-regexp": "^2.0.0",
-        "eslint": "^6.5.1",
-        "eslint-config-minecraft": "^0.1.0",
-        "krarraymap": "latest",
-        "krchecktimer": "latest",
-        "krfileutil": "latest",
-        "krgeometry": "latest",
-        "krjsonwatcher": "^1.0.0",
-        "krlog": "latest",
-        "mcaddon-lang2ts": "latest",
-        "minecraft-scripting-types-client": "^1.0.0",
-        "minecraft-scripting-types-server": "^1.0.0",
-        "node-html-parser": "^1.1.16",
-        "source-map-support": "^0.5.13",
-        "strip-json-comments": "^3.0.1",
-        "typedoc": "^0.15.0",
-        "typescript": "^3.6.3"
+        "@bdsx/ruakr_db": "file:packages/@bdsx/ruakr_db",
+        "@mcbe/identifier": "file:packages/@mcbe/identifier",
+        "@mcbe/system_shared": "file:packages/@mcbe/system_shared",
+        "bdsx": "^1.3.35"
     },
     "devDependencies": {
         "lerna": "^3.22.1"
