--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,12 +4,10 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Build",
-            "type": "typescript",
-            "tsconfig": "tsconfig.json",
-            "problemMatcher": [
-                "$tsc"
-            ],
+            "label": "Lerna Bootstrap",
+            "type": "shell",
+            "command": "lerna bootstrap",
+            "problemMatcher": [],
             "group": "build"
         },
         {
@@ -20,22 +18,6 @@
             "problemMatcher": [
                 "$tsc-watch"
             ],
-            "group": "build"
-        },
-        {
-            "label": "ESLint",
-            "type": "npm",
-            "script": "lint",
-            "problemMatcher": [
-                "$eslint-stylish"
-            ],
-            "group": "build"
-        },
-        {
-            "label": "Publish All",
-            "type": "npm",
-            "script": "publish-all",
-            "problemMatcher": [],
             "group": "build"
         },
         {
