--- a/packages/@mcbe/event_client/package.json
+++ b/packages/@mcbe/event_client/package.json
@@ -15,7 +15,8 @@
     },
     "dependencies": {
       "@mcbe/event": "^1.0.0",
-      "@mcbe/system_client": "^1.0.0"
+      "@mcbe/system_client": "^1.0.0",
+      "krevent": "^1.0.0"
     }
   }
   
