--- a/packages/@mcbe/item/package.json
+++ b/packages/@mcbe/item/package.json
@@ -13,7 +13,7 @@
       "type": "git",
       "url": "https://github.com/karikera/mcbe_modules"
     },
-    "dependencies": {
+    "peerDependencies": {
       "@mcbe/identifier": "^1.0.0"
     }
   }
