--- a/packages/@mcbe/ruakr_log/package.json
+++ b/packages/@mcbe/ruakr_log/package.json
@@ -12,6 +12,12 @@
     "repository": {
       "type": "git",
       "url": "https://github.com/karikera/mcbe_modules"
+    },
+    "dependencies": {
+      "krgeometry": "^1.0.0"
+    },
+    "peerDependencies": {
+      "@mcbe/identifier": "^1.0.0"
     }
   }
   
