--- a/packages/@mcbe/system_server/package.json
+++ b/packages/@mcbe/system_server/package.json
@@ -13,10 +13,8 @@
     "type": "git",
     "url": "https://github.com/karikera/mcbe_modules"
   },
-  "dependencies": {
-    "@mcbe/identifier": "^1.0.0"
-  },
   "peerDependencies": {
+    "@mcbe/identifier": "^1.0.0",
     "@mcbe/system_shared": "1.x"
   }
 }
