--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,55 +9,12 @@
         "sourceMap": true,
         "declaration": true,
         "lib": [
-            "es2015"
+            "es2017"
         ],
-        "target": "es2015"
+        "target": "es2017"
     },
     "include": [
-        "node_modules/krlog/**/*",
-        "node_modules/@mcbe/ruakr_const/**/*",
-        "node_modules/@mcbe/ruakr_util/**/*",
-        "node_modules/@mcbe/system_shared/**/*",
-        "node_modules/@mcbe/system_server/**/*",
-        "node_modules/@mcbe/identifier/**/*",
-        "node_modules/@mcbe/command/**/*",
-        "node_modules/@mcbe/event/**/*",
-        "node_modules/@mcbe/lang/**/*",
-        "node_modules/@mcbe/nexttick/**/*",
-        "node_modules/@mcbe/event_server/**/*",
-        "node_modules/@mcbe/timer/**/*",
-        "node_modules/@mcbe/console/**/*",
-        "node_modules/@mcbe/dummy-console/**/*",
-        "node_modules/krchecktimer/**/*",
-        "node_modules/@mcbe/store/**/*",
-        "node_modules/@mcbe/scoreboard/**/*",
-        "node_modules/@mcbe/system_client/**/*",
-        "node_modules/@mcbe/event_client/**/*",
-        "node_modules/@mcbe/recipe/**/*",
-        "node_modules/@mcbe/item/**/*",
-        "tool/*",
-        "node_modules/krfileutil/**/*",
-        "node_modules/mcaddon-lang2ts/**/*",
-        "node_modules/krgeometry/**/*",
-        "node_modules/@mcbe/farticker/**/*",
-        "node_modules/@mcbe/version/**/*",
-        "node_modules/@mcbe/damper/**/*",
-        "node_modules/@mcbe/entity/**/*",
-        "node_modules/@mcbe/component/**/*",
-        "node_modules/@mcbe/ruakr_itemgroup/**/*",
-        "node_modules/@bdsx/block/**/*",
-        "node_modules/@bdsx/logininfo/**/*",
-        "node_modules/@bdsx/position/**/*",
-        "node_modules/@bdsx/restoreblock/**/*",
-        "node_modules/@bdsx/ruakr_container/**/*",
-        "node_modules/@bdsx/ruakr_db/**/*",
-        "node_modules/@bdsx/ruakr_logdb/**/*",
-        "node_modules/@bdsx/ruakr_user/**/*",
-        "node_modules/@bdsx/logininfo-db/**/*",
-        "node_modules/@bdsx/ruakr_ban/**/*",
-        "node_modules/@bdsx/ruakr_userlog/**/*",
-        "node_modules/@bdsx/ruakr_log/**/*",
-        "node_modules/@mcbe/ruakr_log/**/*",
-        "node_modules/krarraymap/**/*"
+        "packages/**/*",
+        "packages/tool/**/*"
     ]
 }
